--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: node-poc
+  name: node-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: node-poc
+      app: node-app
   template:
     metadata:
       labels:
-        app: node-poc
+        app: node-app
     spec:
       containers:
-      - name: node-poc
-        image: node-poc-image:latest
+      - name: node-app
+        image: node-app:latest
         imagePullPolicy: Never
  
 ---
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-poc
+  name: node-app
 spec:
   selector:
-    app: node-poc
+    app: node-app
   ports:
   - protocol: TCP
     port: 80
