--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-app
+  name: node-app-1
 spec:
   selector:
-    app: node-app
+    app: node-app-1
   ports:
   - protocol: TCP
     port: 80
