--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,7 +28,8 @@ spec:
     app: node-app-1
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 5000
-  type: LoadBalancer
+    port: 80           # This is the port inside the cluster
+    targetPort: 5000    # Port on which your Node.js app is listening
+    nodePort: 30001     # External port on the node (choose a port in the range 30000-32767)
+  type: NodePort  
  
